Modena Tweaks - fix for RT-28384: No focus highlight on ScrollBar

--- a/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/modena/modena.css
+++ b/javafx-ui-controls/src/com/sun/javafx/scene/control/skin/modena/modena.css
@@ -910,6 +910,21 @@ is being used to size a border should also be in pixels.
     -fx-background-color: derive(-fx-box-border,30%), linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
     -fx-background-insets: 0, 0 1 0 1;
 }
+.scroll-bar:focused {
+    -fx-background-color: 
+        -fx-focus-color,
+        linear-gradient(to bottom, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%)),
+        -fx-faint-focus-color,
+        linear-gradient(to bottom, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
+    -fx-background-insets: -0.2, 1, -1.4, 2.6;
+}
+.scroll-bar:vertical:focused {
+    -fx-background-color: 
+        -fx-focus-color,
+        linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%)),
+        -fx-faint-focus-color,
+        linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
+}
 .scroll-bar:disabled {
     -fx-opacity: -fx-disabled-opacity;
 }
